2021-0408 scss檔案結構、列表頁（相簿） 更新

--- a/qp_template.htm
+++ b/qp_template.htm
@@ -222,7 +222,7 @@
                         </ul>
                     </div>
                     <!-- QP Start -->
-                    <section class="qp">
+                    <section class="">
                         <p>註:<abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr>為必填(選)欄位, 不能為空白。</p>
                         <form action="" class="form_grid flex_form">
                             <div class="form_grp">
