--- a/np_template.htm
+++ b/np_template.htm
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HyUI kit</title>
     <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
-    <script src="js/respond.min.js"></script>
-<![endif]-->
+        <script src="js/html5shiv.js"></script>
+        <script src="js/respond.min.js"></script>
+    <![endif]-->
     <!-- slick css-->
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
@@ -222,7 +222,7 @@
                         </ul>
                     </div>
                     <!-- NP Start -->
-                    <section class="np">
+                    <section class="sub_menu">
                         <ul>
                             <li><a href="#"><span class="num">1</span>節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1節點1</a></li>
                             <li><a href="#"><span class="num">2</span>節點2</a></li>
