20210422 slider無障礙修改、tab改button、增加 google搜尋列表頁、調整列印css

--- a/cp_template.htm
+++ b/cp_template.htm
@@ -476,7 +476,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="file_download">
+                        <!-- <div class="file_download">
                             <h3>檔案下載</h3>
                             <ul>
                                 <li>
@@ -511,7 +511,7 @@
                                     <span class="file"><a href="xxxx.wmv" class="file_wmv">檔案名稱.wmv</a>823.8 KB，下載 1,489 次</span>
                                 </li>
                             </ul>
-                        </div>
+                        </div> -->
                     </section>
                     <!-- CP End -->
                 </div>
