--- a/slider.htm
+++ b/slider.htm
@@ -176,8 +176,8 @@
                                     <source media="(min-width: 992px)" data-srcset="images/demo/01.jpg">
                                     <source media="(min-width: 576px)" data-srcset="images/demo/01.jpg">
                                     <source media="(max-width: 575px)" data-srcset="images/demo/01.jpg">
-                                    <img data-src="images/demo/01.jpg" class="cover lazy">
-                                    <noscript><img src="images/demo/01.jpg"></noscript>
+                                    <img data-src="images/demo/01.jpg" class="cover lazy" alt="圖說1">
+                                    <noscript><img src="images/demo/01.jpg" alt="圖說1"></noscript>
                                 </picture>
                                 <span class="caption">圖說1</span>
                             </a>
@@ -189,8 +189,8 @@
                                     <source media="(min-width: 992px)" data-srcset="images/demo/02.jpg">
                                     <source media="(min-width: 576px)" data-srcset="images/demo/02.jpg">
                                     <source media="(max-width: 575px)" data-srcset="images/demo/02.jpg">
-                                    <img data-src="images/demo/02.jpg" class="cover lazy">
-                                    <noscript><img src="images/demo/02.jpg"></noscript>
+                                    <img data-src="images/demo/02.jpg" class="cover lazy" alt="圖說2">
+                                    <noscript><img src="images/demo/02.jpg" alt="圖說2"></noscript>
                                 </picture>
                                 <span class="caption">圖說2</span>
                             </a>
@@ -202,8 +202,8 @@
                                     <source media="(min-width: 992px)" data-srcset="images/demo/03.jpg">
                                     <source media="(min-width: 576px)" data-srcset="images/demo/03.jpg">
                                     <source media="(max-width: 575px)" data-srcset="images/demo/03.jpg">
-                                    <img data-src="images/demo/03.jpg" class="cover lazy">
-                                    <noscript><img src="images/demo/03.jpg"></noscript>
+                                    <img data-src="images/demo/03.jpg" class="cover lazy" alt="圖說3">
+                                    <noscript><img src="images/demo/03.jpg" alt="圖說3"></noscript>
                                 </picture>
                                 <span class="caption">圖說3</span>
                             </a>
@@ -214,37 +214,37 @@
                     <div class="adSlider">
                         <div class="img-container">
                             <a href="#" title="">
-                                <img data-lazy="images/demo/ad_01.jpg" class="contain">
+                                <img data-lazy="images/demo/ad_01.jpg" class="contain" alt="圖片說明1">
                             </a>
                         </div>
                         <div class="img-container">
                             <a href="#" title="">
-                                <img data-lazy="images/demo/ad_02.jpg" class="contain">
+                                <img data-lazy="images/demo/ad_02.jpg" class="contain" alt="圖片說明2">
                             </a>
                         </div>
                         <div class="img-container">
                             <a href="#" title="">
-                                <img data-lazy="images/demo/ad_03.jpg" class="contain">
+                                <img data-lazy="images/demo/ad_03.jpg" class="contain" alt="圖片說明3">
                             </a>
                         </div>
                         <div class="img-container">
                             <a href="#" title="">
-                                <img data-lazy="images/demo/ad_04.jpg" class="contain">
+                                <img data-lazy="images/demo/ad_04.jpg" class="contain" alt="圖片說明4">
                             </a>
                         </div>
                         <div class="img-container">
                             <a href="#" title="">
-                                <img data-lazy="images/demo/ad_05.jpg" class="contain">
+                                <img data-lazy="images/demo/ad_05.jpg" class="contain" alt="圖片說明5">
                             </a>
                         </div>
                         <div class="img-container">
                             <a href="#" title="">
-                                <img data-lazy="images/demo/ad_06.jpg" class="contain">
+                                <img data-lazy="images/demo/ad_06.jpg" class="contain" alt="圖片說明6">
                             </a>
                         </div>
                         <div class="img-container">
                             <a href="#" title="">
-                                <img data-lazy="images/demo/ad_07.jpg" class="cover">
+                                <img data-lazy="images/demo/ad_07.jpg" class="cover" alt="圖片說明7">
                             </a>
                         </div>
                     </div>
@@ -359,7 +359,7 @@
     <script src="vendor/picturefill/picturefill.min.js" async></script><!-- picturefill -->
     <script src="vendor/scrolltable/jquery.scroltable.min.js"></script><!-- scrolltable -->
     <!-- slick js-->
-    <script src="js/slick.min.js "></script><!-- slick -->
+    <script src="vendor/slick/slick.min.js "></script><!-- slick -->
     <script src="js/slick-lightbox.js "></script><!-- slick lightbox -->
     <!-- hyUI -->
     <script src="js/hyui.js"></script>
