--- a/index.htm
+++ b/index.htm
@@ -167,6 +167,11 @@
                         <td>圖片輪播</td>
                         <td><a href="slider.htm"></a></td>
                     </tr>
+                     <tr>
+                        <td></td>
+                        <td>tab 改button</td>
+                        <td><a href="tab.htm"></a></td>
+                    </tr>
                     <tr>
                         <td></td>
                         <td>404 網站錯誤</td>
