20210429 將相簿列表頁加上fancybox

--- a/lp_album_template.htm
+++ b/lp_album_template.htm
@@ -13,6 +13,8 @@
     <!-- slick css-->
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
+    <!-- 燈箱facybox -->
+    <link rel="stylesheet" type="text/css" href="vendor/facybox/dist/jquery.fancybox.min.css">
     <!-- hyUI css -->
     <link rel="stylesheet" href="css/hyui.css">
     <!-- favicon -->
@@ -243,7 +245,7 @@
                             <div class="container">
                                 <div class="Flex-set">
                                     <div class="thumbnail">
-                                        <a href="#">
+                                        <a href="images/demo/01.jpg" data-fancybox="images" data-caption="第1張圖說">
                                             <div class="img-container">
                                                 <picture>
                                                     <source media="(min-width: 1200px)" data-srcset="images/demo/01.jpg">
@@ -262,7 +264,7 @@
                                         </a>
                                     </div>
                                     <div class="thumbnail">
-                                        <a href="#">
+                                        <a href="images/demo/02.jpg" data-fancybox="images" data-caption="第2張圖說">
                                             <div class="img-container">
                                                 <picture>
                                                     <source media="(min-width: 1200px)" data-srcset="images/demo/02.jpg">
@@ -281,7 +283,7 @@
                                         </a>
                                     </div>
                                     <div class="thumbnail">
-                                        <a href="#">
+                                        <a href="images/demo/03.jpg" data-fancybox="images" data-caption="第3張圖說">
                                             <div class="img-container">
                                                 <picture>
                                                     <source media="(min-width: 1200px)" data-srcset="images/demo/03.jpg">
@@ -300,7 +302,7 @@
                                         </a>
                                     </div>
                                     <div class="thumbnail">
-                                        <a href="#">
+                                        <a href="images/demo/04.jpg" data-fancybox="images" data-caption="第4張圖說">
                                             <div class="img-container">
                                                 <picture>
                                                     <source media="(min-width: 1200px)" data-srcset="images/demo/04.jpg">
@@ -319,7 +321,7 @@
                                         </a>
                                     </div>
                                     <div class="thumbnail">
-                                        <a href="#">
+                                        <a href="images/demo/05.jpg" data-fancybox="images" data-caption="第5張圖說">
                                             <div class="img-container">
                                                 <picture>
                                                     <source media="(min-width: 1200px)" data-srcset="images/demo/05.jpg">
@@ -338,7 +340,7 @@
                                         </a>
                                     </div>
                                     <div class="thumbnail">
-                                        <a href="#">
+                                        <a href="images/demo/06.jpg" data-fancybox="images" data-caption="第6張圖說">
                                             <div class="img-container">
                                                 <picture>
                                                     <source media="(min-width: 1200px)" data-srcset="images/demo/06.jpg">
@@ -357,7 +359,7 @@
                                         </a>
                                     </div>
                                     <div class="thumbnail">
-                                        <a href="#">
+                                        <a href="images/demo/07.jpg" data-fancybox="images" data-caption="第7張圖說">
                                             <div class="img-container">
                                                 <picture>
                                                     <source media="(min-width: 1200px)" data-srcset="images/demo/07.jpg">
@@ -376,7 +378,7 @@
                                         </a>
                                     </div>
                                     <div class="thumbnail">
-                                        <a href="#">
+                                        <a href="images/demo/08.jpg" data-fancybox="images" data-caption="第8張圖說">
                                             <div class="img-container">
                                                 <picture>
                                                     <source media="(min-width: 1200px)" data-srcset="images/demo/08.jpg">
@@ -395,7 +397,7 @@
                                         </a>
                                     </div>
                                     <div class="thumbnail">
-                                        <a href="#">
+                                        <a href="images/demo/09.jpg" data-fancybox="images" data-caption="第9張圖說">
                                             <div class="img-container">
                                                 <picture>
                                                     <source media="(min-width: 1200px)" data-srcset="images/demo/09.jpg">
@@ -414,7 +416,7 @@
                                         </a>
                                     </div>
                                     <div class="thumbnail">
-                                        <a href="#">
+                                        <a href="images/demo/10.jpg" data-fancybox="images" data-caption="第10張圖說">
                                             <div class="img-container">
                                                 <picture>
                                                     <source media="(min-width: 1200px)" data-srcset="images/demo/10.jpg">
@@ -584,6 +586,8 @@
     <script src="vendor/lazyload/lazyload.js"></script><!-- lazyload -->
     <script src="vendor/picturefill/picturefill.min.js" async></script><!-- picturefill -->
     <script src="vendor/scrolltable/jquery.scroltable.min.js"></script><!-- scrolltable -->
+    <!-- 燈箱facybox -->
+    <script src="vendor/facybox/dist/jquery.fancybox.min.js"></script>
     <!-- hyUI -->
     <script src="js/hyui.js"></script>
     <!-- 客製js -->
