--- a/form.htm
+++ b/form.htm
@@ -391,6 +391,7 @@
                                         <input name="username" id="inputSample" type="text">
                                         <label for="inputSample2" class="label_hidden">雙欄2</label>
                                         <input name="username" id="inputSample2" type="text">
+                                        <div class="notice">加上className "label_hidden" 隱藏label文字</div>
                                     </div>
                                 </div>
                                 <div class="form_grp">
