--- a/form.htm
+++ b/form.htm
@@ -228,8 +228,7 @@
                                             <i class="i_mail"></i>
                                         </div>
                                         <div class="notice">這是一般提醒訊息區塊</div>
-                                        <div class="notice_warning">這似乎不是一個正常的Email格式
-                                            <a href="#" class="close"><img src="images/basic/icon_close.svg" alt=""></a>
+                                        <div class="notice_warning">這似乎不是一個正常的Email格式 <a href="#" class="close"><img src="images/basic/icon_close.svg" alt=""></a>
                                         </div>
                                     </div>
                                 </div>
